@@ -125,6 +125,7 @@ ul.toolbarmenu li.separator_below
 #messagelist tr td div.expanded,
 #messagelist tr td.threads div.listmenu,
 #messagelist tr td.attachment span.attachment,
+#messagelist tr td.attachment span.report,
 #messagelist tr td.flag span.flagged,
 #messagelist tr td.flag span.unflagged:hover,
 #messagelist tr td.subject span.msgicon,
